apps/media/radarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  labels:
    revision: "1"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.samsonnguyen.ca`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
          namespace: media
      middlewares:
        - name: traefik-sso@kubernetescrd
        - name: traefik-redirect-scheme@kubernetescrd
  tls:
    secretName: default-samsonnguyen-ca
    domains:
      - main: samsonnguyen.ca
